# s3-iceberg-local-trino-nessie-minio

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
images/: .$S3_ICEBERG_LOCAL.drawio.bkp  S3_ICEBERG_LOCAL.drawio
sqlpad-data/queries/: query_exemplo.json  query_exemplo1.json  query_exemplo2.json  query_exemplo3.json
trino-data/: sql_start.sh  sql_start.sql
trino-data/config/: config.properties  jvm.config  log.properties
