[tool.poetry]
name = "s3-iceberg-trino-nessie-minio"
version = "0.1.0"
description = ""
authors = ["Ruda <filiperuda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.5.3"
sqlalchemy = "^2.0.36"
trino = "^0.331.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
